--- a/fcdg/client/package.json
+++ b/fcdg/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.1",
     "express": "^4.17.1",
